add Emailconfig file to .env

--- a/annamalaiyar-software/.env
+++ b/annamalaiyar-software/.env
@@ -3,3 +3,8 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=""
 DB_NAME=annamalaiyar_db
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USERNAME=annamalaiyarsoftware@gmail.com
+EMAIL_PASSWORD=xxxx xxxx xxxx xxxx
+ADMIN_EMAIL=praveenkanth@gmail.com
